applications/web/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: finops-web
  namespace: finops

spec:
  selector:
    app: finops-web

  ports:
    - name: http
      port: 80
      targetPort: 8080

  type: ClusterIP
