applications/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: finops-web
  namespace: finops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - app.sniper541.com
      secretName: finops-web-tls

  rules:
    - host: app.sniper541.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finops-web
                port:
                  number: 80
